Telemetry update